5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1582_1331.log
== TEST (2019-03-16 21:41:29) 
-- CODE:
nguerr=3
total=50
int(total/nguerr)
print(round(int,0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(int,0))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:41:56) 
-- CODE:
nguerr=3
total=50
int(total/nguerr)
print(round(int,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(int,1))
TypeError: type type doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:42:48) 
-- CODE:
nguerr=3
total=50
int(total/nguerr)
print(int)
-- OUTPUT:
<class 'int'>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:42:58) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(int)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:43:07) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(round(int,0)
-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:43:58) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(round(int,0)
sobra=2
print(sobra)
-- ERROR:
File "XXXX", line 5
    sobra=2
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:44:04) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(round(int,0)

-- ERROR:
File "XXXX", line 5
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:44:26) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(int)

-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:44:30) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(int)

-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:44:32) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(int)

-- EXECUTION TIME:
0.191545
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:45:31) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(int)
sobra=int*3-total
print(sobra)

-- OUTPUT:
16.666666666666668
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:45:51) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(round(int,0)
sobra=int*3-total
print(sobra)

-- ERROR:
File "XXXX", line 5
    sobra=int*3-total
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:46:26) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
sobra=int*3-total
print(round(int,0)
print(sobra)

-- ERROR:
File "XXXX", line 6
    print(sobra)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:46:52) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
resto=int*3-total
print(round(int,0)
print(resto)

-- ERROR:
File "XXXX", line 6
    print(resto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:47:01) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
resto=int*3-total
print(round(int,0);(resto)
print(resto)

-- ERROR:
File "XXXX", line 5
    print(round(int,0);(resto)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:47:08) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
resto=int*3-total
print(round(int,0);(resto)

-- ERROR:
File "XXXX", line 5
    print(round(int,0);(resto)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:47:16) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
resto=int*3-total
print(round(int,0)

-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:47:24) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
resto=int*3-total
print(round(int,1)

-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:47:30) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)

print(round(int,1)

-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:47:48) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(round(int,1))

-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:47:54) 
-- CODE:
nguerr=3
total=50
int=(total/nguerr)
print(round(int,0))

-- OUTPUT:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:48:28) 
-- CODE:
nguerr=3
total=50
int=(total//nguerr)
print(int,0)

-- OUTPUT:
16 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:49:04) 
-- CODE:
nguerr=3
total=50
int=(total//nguerr)
sobra=int*3-total
print(int)
print(sobra)



-- OUTPUT:
16
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:49:10) 
-- CODE:
nguerr=3
total=50
int=(total//nguerr)
sobra=int*3-total
print(int)
print(sobra)



-- EXECUTION TIME:
0.167635
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 21:49:38) 
-- CODE:
nguerr=3
total=50
int=(total//nguerr)
sobra=total-(int*3)
print(int)
print(sobra)



-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 21:49:41) 
-- CODE:
nguerr=3
total=50
int=(total//nguerr)
sobra=total-(int*3)
print(int)
print(sobra)



-- EXECUTION TIME:
0.208643
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
